--- a/03.multi-play.yaml
+++ b/03.multi-play.yaml
@@ -7,7 +7,7 @@
       msg: Hellow from PLAY-01 and TASK-01
   
   - name: PLAY-01 and TASK-02
-    ansible,builtin,debug:
+    ansible.builtin.debug:
       msg: Hellow from PLAY-01 and TASK-02
 
     
@@ -20,5 +20,5 @@
       msg: Hellow from PLAY-02 and TASK-01
   
   - name: PLAY-02 and TASK-02
-    ansible,builtin,debug:
+    ansible.builtin.debug:
       msg: Hellow from PLAY-02 and TASK-02
