--- a/04.variable.yaml
+++ b/04.variable.yaml
@@ -8,6 +8,6 @@
   taks:
   - name: print the course info
     ansible.builtin.debug:
-      msg: Course name is : {{ Course }}, Durations is: {{ Duration }}, Trainer is : {{ Trainer }}
-      
+      msg: "Course name is : {{ Course }}, Durations is: {{ Duration }}, Trainer is : {{ Trainer }}""
+
 
