--- a/04.variable.yaml
+++ b/04.variable.yaml
@@ -1,13 +1,11 @@
 - name: play level variables
   hosts: local
-  connection: local #anisble is connecting to local host
+  connection: local # Ansible is connecting to localhost
   vars:
-    Course: anisble
-    Duration: 10hrs
-    Trainer: Rohith
+    COURSE: Ansible
+    DURATION: 10HRS
+    Trainer: Sivakumar reddy
   tasks:
   - name: print the course info
     ansible.builtin.debug:
-      msg: "Course name is : {{ Course }}, Durations is: {{ Duration }}, Trainer is : {{ Trainer }}""
-
-
+      msg: "Course Name is: {{ COURSE }}, Duratioin: {{ DURATION }}, Trainer: {{ Trainer }}"
