--- a/05.tasks-variable.yaml
+++ b/05.tasks-variable.yaml
@@ -7,6 +7,7 @@
     Trainer: Rohith
   tasks:
   - name: Printing varaibles
-    Course: Phython
+    vars:
+      Course: Phython
     ansible.builtin.debug:
       msg: " course name is {{ Course }}, duration is : {{ Duration }}, thrainer is: {{ Trainer }}"
