--- a/06.vars-files.yaml
+++ b/06.vars-files.yaml
@@ -4,6 +4,6 @@
   vars_files:
   - course.yaml
   tasks:
-  - name: print the course info
+  - name: 
     ansible.builtin.debug:
       msg: " course name is {{ Course }}, duration is : {{ Duration }}, thrainer is: {{ Trainer }}"
