--- a/course.yaml
+++ b/course.yaml
@@ -1,3 +1,4 @@
-Course: Ansible
-Duration: 10hrs 
-Trainer: Rohith
+# Course: Ansible
+# Duration: 10hrs 
+# Trainer: Rohith
+Name: from files level
