--- a/inventory.ini
+++ b/inventory.ini
@@ -5,6 +5,7 @@
 172.31.21.58
 
 [local:vars]
-Course=Ansible
-Duration=10hrs 
-Trainer=Rohith
+; Course=Ansible
+; Duration=10hrs 
+; Trainer=Rohith
+Name=from inventory
