--- a/10.vars-preference.yaml
+++ b/10.vars-preference.yaml
@@ -11,8 +11,8 @@
     private: false  
   tasks:
   - name: testing variables preference
-  #   vars:
-  #     NAME: from task level
+    vars:
+      NAME: from task level
     ansible.builtin.debug:
       msg: "Name: {{ NAME }}"
 
