--- a/11.datatypes.yaml
+++ b/11.datatypes.yaml
@@ -12,3 +12,7 @@
     concepts: # dictionary or map
       cloud: aws
       cm: ansible
+  tasks:
+  - name: print the course info
+    ansible.builtin.debug:
+      msg: "the course is: {{ Course }}, duration is: {{ Duration }}, is it live?: {{ is_live }}, tools are: {{ tools }}, and concepts are:{{ concepts }}"
