--- a/11.datatypes.yaml
+++ b/11.datatypes.yaml
@@ -16,3 +16,6 @@
   - name: print the course info
     ansible.builtin.debug:
       msg: "the course is: {{ Course }}, duration is: {{ Duration }}, is it live?: {{ is_live }}, tools are: {{ tools }}, and concepts are:{{ concepts }}"
+
+#list:[]
+#map:{}
