--- a/functions.yaml
+++ b/functions.yaml
@@ -1,7 +1,14 @@
 - name: functions
   hosts: local
   connection: local
+  vars:
+    technologies: Devops, Linux, Shell, Ansible #string
   tasks:
   - name: default variables
     ansible.builtin.debug:
       msg: " Hello my name is {{name | default('Rohith')}}"
+
+  - name: transforming string into list
+    ansible.builtin.debug:
+      msg: "Technologies are: {{ technologies | split (',')}}"
+      
