--- a/functions.yaml
+++ b/functions.yaml
@@ -27,3 +27,11 @@
   - name: converting list to map
     ansible.builtin.debug:
       msg: " maps are: {{ listTags | items2dict}}"
+
+  - name: read yaml file and take it into variables
+    ansible.builtin.set_fact:
+      student_yaml: "{{lookup('file', 'student.yaml') | from_yaml}}"
+
+  - name: convert yaml file into json
+    ansible.builtin.debug:
+      msg: " json: {{ student_yaml | to_jason}}"
