--- a/functions.yaml
+++ b/functions.yaml
@@ -34,4 +34,4 @@
 
   - name: convert yaml file into json
     ansible.builtin.debug:
-      msg: " json: {{ student_yaml | to_jason}}"
+      msg: " json: {{ student_yaml | to_json}}"
