--- a/functions.yaml
+++ b/functions.yaml
@@ -35,3 +35,9 @@
   - name: convert yaml file into json
     ansible.builtin.debug:
       msg: " json: {{ student_yaml | to_json}}"
+
+  - name: save json to file
+    ansible.builtin.copy:
+      dest: ./student-data.json
+      content: "{{ student_yaml | to_nice_json}}"
+      
