--- a/functions.yaml
+++ b/functions.yaml
@@ -5,6 +5,7 @@
     technologies: Devops, Linux, Shell, Ansible #string
     name: "Rohith"
     gmail: ROHITHDFN@GMAIL.com
+    ipaddress: 2555.3334.523.32
     tags: # Dictionary or map
       Application: Payment
       Environment: Devops
@@ -50,3 +51,9 @@
   - name: convert lowercase
     ansible.builtin.debug:
       msg: "{{ gmail | lower }}"
+  
+  - name: check IP is valid or not
+    ansible.builtin.debug: 
+      msg: "{{ ipaddress | ansible.utils.ipv4 }}"
+
+  
